# futarchy-arbitrage

./: .env.example  .gas-snapshot  .gitignore  .gitmodules  100_PERCENT_COVERAGE_COMPLETE.md  CLAUDE.md  COMMANDS.md  COVERAGE_100_PERCENT_FINAL.md  COVERAGE_COMPLETE.md  EXPORT_STATUS.txt  PRODUCTION_CERTIFICATION.md  PROJECT_COMPLETION_SUMMARY.md  README.md  SETUP.md  SLITHER_ANALYSIS_REPORT.md  SLITHER_SUMMARY.txt  TESTING_QUICK_REFERENCE.md  WARNING_FIXES_SUMMARY.md  build-output.txt  coverage_report.txt  deployment_executor_v4_1754933845.json  deployment_info_v2.json  eslint.config.js  foundry.toml  package-lock.json  pyproject.toml  remappings.txt  requirements-eip7702.txt  requirements-extended.txt  requirements-tracing.txt  requirements.txt  setup.sh  slither-output.txt  verify-setup.sh
.github/: copilot-instructions.md
.instructions/: cli_interface.md  cowswap.md  modularisation.md  multicall_bot.md  unified_bot_system.md
.reference/: algebra_pool.abi.json  balancer_router.abi.json  balancer_vault_2.abi.json  prompt_1.md  wagno_full.abi.json  wheighted_pool.abi.json
cache/: solidity-files-cache.json  test-failures
config/: logging.yaml  logrotate.conf  multi_chain_config.md
contracts/: FutarchyArbExecutorV3.sol.bak  FutarchyArbExecutorV4.sol  FutarchyArbExecutorV5.sol  FutarchyArbExecutorV5.sol.bak  FutarchyArbitrageExecutorV2.sol.bak  FutarchyBatchExecutor.sol.bak  FutarchyBatchExecutorMinimal.sol  FutarchyBatchExecutorSimple.sol.bak  FutarchyBatchExecutorUltra.sol  FutarchyBatchExecutorV2.sol  InstitutionalSolverCore.sol  InstitutionalSolverSystem.sol  LibBLS.sol  LibP256.sol  PectraWrapper.sol  PredictionArbExecutorV1.sol  SafetyModule.sol  SimpleEIP7702Test.sol  SupportingModules.sol  TransientReentrancyGuard.sol  gas-snapshot.yml
deployments/: deployment_executor_v5_1755543275.json  deployment_prediction_arb_v1_1755903555.json  ticklens_deployment.json
docs/: API_MAP.md  BUILD_ARTIFACTS.md  BUILD_SUMMARY.md  CLZ_OPCODE_ANALYSIS.md  CODE_QUALITY_REPORT.md  COMPETITIVE_ANALYSIS.md  COVERAGE_100_PERCENT.md  COVERAGE_FINAL_100_PERCENT.md  COVERAGE_PERCENTAGE.md  COVERAGE_REPORT.md  FAILURE_RECOVERY.md  FEATURES_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INSTITUTIONAL_SOLVER_README.md  INSTITUTIONAL_SOLVER_SYSTEM.md  LOG_ROTATION.md  MULTI_CHAIN_DEPLOYMENT.md  NEXT_STEPS_CHECKLIST.md  OPERATIONAL_READINESS.md  PHASE1_SUMMARY.md  PRODUCTION_DEPLOYMENT.md  QUICK_START_PRODUCTION.md  SCRIPTS_INDEX.md  SECURITY_AUDIT_SLITHER.md  SLACK_ALERTS_QUICKSTART.md  TASK_COMPLETION_SUMMARY.md  TELEGRAM_SETUP.md  TEST_COVERAGE_SUMMARY.md  TRACING_GUIDE.md  TRACING_README.md  book.toml  (+1 more)
(+475 files in other folders)
