[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "futarchy-arbitrage"
version = "1.0.0"
description = "Futarchy arbitrage bot for Gnosis Chain"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "web3==6.11.1",
  "eth-account==0.11.3",
  "eth-utils",
  "eth-keys",
  "requests",
  "python-dotenv",
  "supabase",
  "tabulate",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "mypy", "flake8"]

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
