[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "futarchy-arbitrage"
version = "1.0.0"
description = "Futarchy arbitrage bot for Gnosis Chain"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
"web3>=7.0.0",
"eth-account>=0.13.0",
"eth-utils>=4.0.0",
"eth-keys>=0.5.0",
"requests",
"python-dotenv",
"supabase",
"tabulate",
]

[project.optional-dependencies]
dev = ["pytest", "black", "isort", "mypy", "flake8"]

[project.scripts]
# Build & Indexing Tools
futarchy-index = "scripts.index_artifacts:main"
futarchy-compile = "scripts.compile_all:main"

# Deployment Tools
futarchy-deploy-v5 = "scripts.deploy_executor_v5:main"
futarchy-deploy-prediction = "scripts.deploy_prediction_arb_v1:main"
futarchy-deploy-solver = "scripts.deploy_institutional_solver:main"

# Verification Tools
futarchy-verify = "scripts.verify_contract:main"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
